fix: query item alignment

--- a/src/components/reusable/queryBuilder/queryBuilderRule.scss
+++ b/src/components/reusable/queryBuilder/queryBuilderRule.scss
@@ -85,6 +85,7 @@
   min-width: 150px;
   padding: 0 16px;
   box-sizing: border-box;
+  transform: translateY(3px);
 
   kyn-slider-input {
     width: 100%;
